# MBTG

./: CHANGELOG.md  LICENSE  MBTG.cabal  README.md
.agent-shell/transcripts/: 2026-03-11-11-20-28.md
app/: Main.hs
examples/: counter.itf.json  counter.itf.test.ts
src/: MBTG.hs
src/MBTG/: Types.hs
src/MBTG/Generator/: TypeScript.hs
src/MBTG/Parser/: ITF.hs
