cabal-version:      3.0
name:               MBTG
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             NzSN
maintainer:         nzsn0101@gmail.com
category:           Codec
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        MBTG
      , MBTG.Types
      , MBTG.Parser.ITF
      , MBTG.Generator.TypeScript
    build-depends:
        base ^>=4.21.0.0
      , aeson
      , text
      , bytestring
      , containers
      , directory
      , filepath
      , vector
      , scientific
    hs-source-dirs:   src
    default-language: GHC2024

executable MBTG
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0
      , MBTG
      , optparse-applicative
    hs-source-dirs:   app
    default-language: GHC2024

test-suite MBTG-test
    import:           warnings
    default-language: GHC2024
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0
      , MBTG